--- a/app/src/main/res/layout/activity_advanced_calculator.xml
+++ b/app/src/main/res/layout/activity_advanced_calculator.xml
@@ -29,7 +29,7 @@
             app:layout_rowWeight="1" />
 
         <Button
-            android:id="@id/clear_display"
+            android:id="@+id/clear_display"
             android:text="@string/clear"
             app:layout_column="1"
             app:layout_columnSpan="2"
@@ -38,7 +38,7 @@
             app:layout_rowWeight="1" />
 
         <Button
-            android:id="@id/change_sign"
+            android:id="@+id/change_sign"
             android:text="@string/change_sign_sign"
             app:layout_column="3"
             app:layout_columnWeight="1"
@@ -110,7 +110,7 @@
             app:layout_rowWeight="1" />
 
         <Button
-            android:id="@id/division"
+            android:id="@+id/division"
             android:text="@string/division"
             app:layout_column="3"
             app:layout_columnWeight="1"
@@ -118,7 +118,7 @@
             app:layout_rowWeight="1" />
 
         <Button
-            android:id="@id/multiplication"
+            android:id="@+id/multiplication"
             android:text="@string/multiplication"
             app:layout_column="3"
             app:layout_columnWeight="1"
@@ -126,7 +126,7 @@
             app:layout_rowWeight="1" />
 
         <Button
-            android:id="@id/subtraction"
+            android:id="@+id/subtraction"
             android:text="@string/subtraction"
             app:layout_column="3"
             app:layout_columnWeight="1"
@@ -142,7 +142,7 @@
             app:layout_rowWeight="1" />
 
         <Button
-            android:id="@id/separated_button"
+            android:id="@+id/separated_button"
             android:text="@string/separated_sign"
             app:layout_column="1"
             app:layout_columnWeight="1"
@@ -150,7 +150,7 @@
             app:layout_rowWeight="1" />
 
         <Button
-            android:id="@id/equals"
+            android:id="@+id/equals"
             android:text="@string/equals_sign"
             app:layout_column="2"
             app:layout_columnWeight="1"
@@ -158,7 +158,7 @@
             app:layout_rowWeight="1" />
 
         <Button
-            android:id="@id/addition"
+            android:id="@+id/addition"
             android:text="@string/addition_sign"
             app:layout_column="3"
             app:layout_columnWeight="1"
