--- a/app/src/main/res/layout/activity_simple_calculator.xml
+++ b/app/src/main/res/layout/activity_simple_calculator.xml
@@ -1,116 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.dawid.calculator.SimpleCalculatorActivity">
 
-    <TextView
-        android:id="@+id/display"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/display"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/output_height"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:gravity="center_vertical"
+            android:textSize="@dimen/input_height" />
 
     <android.support.v7.widget.GridLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/display"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
         app:columnCount="4"
         app:rowCount="5">
 
         <Button
             android:id="@+id/bksp"
+            android:text="@string/bksp"
             app:layout_column="0"
             app:layout_columnWeight="1"
             app:layout_row="0"
-            app:layout_rowWeight="1"
-            android:text="@string/bksp" />
+            app:layout_rowWeight="1" />
 
         <Button
             android:id="@+id/clear_display"
+            android:text="@string/clear"
             app:layout_column="1"
             app:layout_columnSpan="2"
             app:layout_columnWeight="1"
             app:layout_row="0"
-            app:layout_rowWeight="1"
-            android:text="@string/clear" />
+            app:layout_rowWeight="1" />
 
         <Button
             android:id="@+id/change_sign"
+            android:text="@string/change_sign_sign"
             app:layout_column="3"
             app:layout_columnWeight="1"
             app:layout_row="0"
-            app:layout_rowWeight="1"
-            android:text="@string/change_sign_sign" />
+            app:layout_rowWeight="1" />
 
         <Button
             android:id="@+id/division"
+            android:text="@string/division"
             app:layout_column="3"
             app:layout_columnWeight="1"
             app:layout_row="1"
-            app:layout_rowWeight="1"
-            android:text="@string/division" />
+            app:layout_rowWeight="1" />
 
         <Button
             android:id="@+id/multiplication"
+            android:text="@string/multiplication"
             app:layout_column="3"
             app:layout_columnWeight="1"
             app:layout_row="2"
-            app:layout_rowWeight="1"
-            android:text="@string/multiplication" />
+            app:layout_rowWeight="1" />
 
         <Button
             android:id="@+id/subtraction"
+            android:text="@string/subtraction"
             app:layout_column="3"
             app:layout_columnWeight="1"
             app:layout_row="3"
-            app:layout_rowWeight="1"
-            android:text="@string/subtraction" />
+            app:layout_rowWeight="1" />
 
         <Button
             android:id="@+id/zero"
+            android:text="@string/_0"
             app:layout_column="0"
             app:layout_columnWeight="1"
             app:layout_row="4"
-            app:layout_rowWeight="1"
-            android:text="@string/_0" />
+            app:layout_rowWeight="1" />
 
         <Button
             android:id="@+id/separated_button"
+            android:text="@string/separated_sign"
             app:layout_column="1"
             app:layout_columnWeight="1"
             app:layout_row="4"
-            app:layout_rowWeight="1"
-            android:text="@string/separated_sign" />
+            app:layout_rowWeight="1" />
 
         <Button
             android:id="@+id/equals"
+            android:text="@string/equals_sign"
             app:layout_column="2"
             app:layout_columnWeight="1"
             app:layout_row="4"
-            app:layout_rowWeight="1"
-            android:text="@string/equals_sign" />
+            app:layout_rowWeight="1" />
 
         <Button
             android:id="@+id/addition"
+            android:text="@string/addition_sign"
             app:layout_column="3"
             app:layout_columnWeight="1"
             app:layout_row="4"
-            app:layout_rowWeight="1"
-            android:text="@string/addition_sign" />
+            app:layout_rowWeight="1" />
 
         <android.support.v7.widget.GridLayout
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
             android:id="@+id/number_pad_grid"
-            app:layout_row="1"
-            app:layout_column="0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:columnCount="3"
-            app:rowCount="3"
+            app:layout_column="0"
             app:layout_columnSpan="3"
-            app:layout_rowSpan="3"
             app:layout_columnWeight="1"
-            app:layout_rowWeight="1" />
+            app:layout_row="1"
+            app:layout_rowSpan="3"
+            app:layout_rowWeight="1"
+            app:rowCount="3" />
     </android.support.v7.widget.GridLayout>
-</RelativeLayout>
+</LinearLayout>
