--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="calculator_grid_layout_margin">5dp</dimen>
+    <dimen name="name_activity">40sp</dimen>
+    <dimen name="output_height">40dp</dimen>
+    <dimen name="menu_buttons_size">200dp</dimen>
+    <dimen name="input_height">20sp</dimen>
 </resources>
